<resources>
    <string name="accept">I Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_import">Import</string>
    <string name="action_load">Load</string>
    <string name="action_new">New Profile</string>
    <string name="action_quick">Actions</string>
    <string name="action_save">Save</string>
    <string name="action_save_reload">Save &amp; Reload</string>
    <string name="action_save_only">Save only</string>
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_turn_off">Turn Off</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="am_restart_warning">This method is not recommended when mirroring to wireless displays</string>
    <string name="any_profile">Any profile</string>
    <string name="app_name">SecondScreen</string>
    <string name="available_actions">Available Actions</string>
    <string name="backlight_off_message">NOTE: Some custom kernels may prevent the backlight from turning off completely with the Backlight Off option.</string>
    <string name="backlight_off_message_samsung">NOTE: On Samsung devices, the backlight may not turn off completely with the Backlight Off option.</string>
    <string name="blacklisted">To protect your device, SecondScreen will not allow you to use this resolution and/or density value.</string>
    <string name="both_versions_installed">Multiple versions of SecondScreen are installed on your device. Only one version may be installed at a time.\n\nPress Uninstall to remove the duplicate version, then reload the app.</string>
    <string name="check_for_update">Check For Update</string>
    <string name="checking_for_superuser">Checking for superuser access&#8230; please wait.</string>
    <string name="decline">I Decline</string>
    <string name="deleting_current_profile">Cannot delete the currently active profile</string>
    <string name="dialog_about_message">SecondScreen: better screen mirroring for rooted devices\n\n&#169; 2015 Braden Farmer\n\nThis app\'s <a href="http://github.com/farmerbb/SecondScreen">source code</a> is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a> (except as otherwise noted), and uses Apache-licensed code from the following projects:\n\n&#8226; <a href="http://jgilfelt.github.io/android-actionbarstylegenerator/">Android Action Bar Style Generator</a>\n\n&#8226; <a href="http://github.com/Chainfire/libsuperuser">libsuperuser</a>\n\n&#8226; <a href="http://www.twofortyfouram.com/developer.html">Locale Developer API</a>\n\n&#8226; <a href="http://stackoverflow.com/a/28402378">SystemProperties</a>\n\nThis app uses code derived from the <a href="https://github.com/makovkastar/FloatingActionButton">FloatingActionButton</a> project, licensed under the MIT License.\n\nThis app uses graphical assets from the following sources, licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY-3.0</a>:\n\n&#8226; <a href="http://developer.android.com/distribute/tools/promote/brand.html">Android robot (Google)</a>\n\n&#8226; <a href="http://shreyasachar.github.io/AndroidAssetStudio/">Android Asset Studio for Material Design"</a></string>
    <string name="dialog_about_title">About SecondScreen</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_delete_button_title">Delete profile</string>
    <string name="dialog_first_load">&#8226; Connect your display first, if you have not already done so.\n\n&#8226; Make sure you\'ve granted root access to SecondScreen - otherwise, it won\'t do anything.\n\n&#8226; Hang tight for a few seconds as your device changes its resolution and density!\n\n&#8226; When the SecondScreen icon appears in the status bar, your device is ready to use.\n\n&#8226; For best results, connect any Bluetooth devices after the profile is finished loading.\n\n&#8226; When you\'re finished using your display, select the Turn Off option in the notification.</string>
    <string name="dialog_load_profile">Instructions</string>
    <string name="dialog_reload_profile_title">Reload profile?</string>
    <string name="dialog_turn_off_message">is currently active. Would you like to turn it off?</string>
    <string name="dialog_turn_off_title">Turn profile off</string>
    <string name="dialog_ui_refresh">You\'ve left your UI refresh method as \"Do nothing\".  Selecting a UI refresh method is highly recommended when changing your resolution and/or density.\n\nSave anyway?</string>
    <string name="dialog_upgrade_message">SecondScreen has not been tested on this version of Android. It may crash or behave in other unexpected ways.</string>
    <string name="display_disconnected">Display disconnected</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="editing_current_profile">This is the currently active profile. Would you like to reload it to apply your changes?</string>
    <string name="enter_profile_name">Enter profile name</string>
    <string name="error_loading_list">Error loading list of profiles!</string>
    <string name="error_loading_profile">Error loading profile!</string>
    <string name="expert_mode">Expert mode</string>
    <string name="expert_mode_dialog">Expert mode overrides SecondScreen\'s internal blacklist of unsafe resolution and density combinations. Only use this option if you know exactly what you are doing. Safe mode is strongly recommended when using this option.\n\nReally enable expert mode?</string>
    <string name="expert_mode_summary">Allow any user-defined value to be set for resolution and density</string>
    <string name="failed_to_save">Error: Failed to save profile!</string>
    <string name="first_run">This app REQUIRES root access to operate and is ONLY for devices with AOSP or stock (Google) Android ROMs! It is not guaranteed to function properly on devices with manufacturer-skinned ROMs.\n\nYou are SOLELY held responsible for how you use this app, for the type of device you use it on, and for the methods of obtaining root access on your device.</string>
    <string name="hdmi_checkbox">Start SecondScreen when connecting a display</string>
    <string name="hdmi_connected">Display connected</string>
    <string name="label_load_profile"> Load Profile</string>
    <string name="label_profile_active">Profile Active</string>
    <string name="label_quick_actions">Quick Actions</string>
    <string name="loading_profile">Loading SecondScreen&#8230;</string>
    <string name="notification">SecondScreen is active</string>
    <string name="notification_settings">Notification settings</string>
    <string name="new_device_message">SecondScreen appears to have been restored from a backup.\n\nIf this is a different device, please clear app data and re-run SecondScreen to ensure that it operates correctly (otherwise, problems may occur).</string>
    <string name="no_profiles_found">No profiles found</string>
    <string name="no_superuser">Unable to obtain superuser permissions!</string>
    <string name="pref_description_safe_mode">Profiles will not stay active after a reboot</string>
    <string name="pref_title_hdmi">Auto-start</string>
    <string name="pref_title_hdmi_select_profile">Auto-start action</string>
    <string name="pref_title_hide_notification">Hide notification icon</string>
    <string name="pref_title_notification_action">Secondary action button</string>
    <string name="pref_title_safe_mode">Safe mode (recommended)</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="profile_helper_text">Tap a profile name to view or load its settings.\nCreate additional profiles using the plus button.</string>
    <string name="profile_helper_text_alt">The highlighted profile below is currently active.\nTap its name to view its settings or turn it off.</string>
    <string name="profile_view_bluetooth_on">Bluetooth on</string>
    <string name="profile_view_daydreams_on">Daydreams on</string>
    <string name="profile_view_navbar">Force navbar</string>
    <string name="pref_header_display_settings">Display settings</string>
    <string name="pref_header_additional_settings">Additional settings</string>
    <string name="pref_title_resolution">Resolution</string>
    <string name="pref_title_dpi">Density</string>
    <string name="pref_title_overscan_settings">Overscan settings</string>
    <string name="pref_title_overscan">Enable overscan</string>
    <string name="pref_description_overscan">Useful for older TVs that crop parts of the image</string>
    <string name="pref_title_bluetooth_on">Turn Bluetooth on</string>
    <string name="pref_description_bluetooth_on">Automatically enable Bluetooth (to connect a keyboard, mouse, and/or game controller)</string>
    <string name="pref_title_wifi_on">Turn Wi-Fi on</string>
    <string name="pref_description_wifi_on">Automatically enable Wi-Fi</string>
    <string name="pref_title_daydreams_on">Turn Daydreams on</string>
    <string name="pref_description_daydreams_on">Show a screensaver when device is locked (wired connections only)</string>
    <string name="pref_title_show_touches">Show touches</string>
    <string name="pref_description_show_touches">Show visual feedback for touchscreen events</string>
    <string name="pref_title_rotation">Screen rotation</string>
    <string name="pref_title_backlight_off">Backlight off</string>
    <string name="pref_description_backlight_off">Disable the device\'s backlight while a display is connected (only works on some devices)</string>
    <string name="pref_title_vibration_off">Vibration off</string>
    <string name="pref_description_vibration_off">Disable the device\'s vibration motor (only works on some devices)</string>
    <string name="pref_title_chrome">Desktop mode in Chrome</string>
    <string name="pref_description_chrome">Always show desktop sites in Chrome browser for a more PC-like experience</string>
    <string name="pref_title_ui_refresh">UI refresh method</string>
    <string name="pref_title_navbar">Force show navigation bar</string>
    <string name="pref_description_navbar">Shows the navigation bar for devices with physical buttons (only works on CyanogenMod ROMs)</string>
    <string name="pref_title_screen_timeout">Screen timeout</string>
    <string name="pref_overscan_values">Overscan values</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="pref_title_test_overscan">Test overscan</string>
    <string name="pref_description_test_overscan">Note: The overscan values are only accurate if you are testing them while the profile is active.</string>
    <string name="quick_backlight">Backlight</string>
    <string name="quick_vibration">Vibration</string>
    <string name="quick_chrome">Chrome Desktop Mode</string>
    <string name="quick_overscan">Overscan</string>
    <string name="quick_turn_off">Reset settings</string>
    <string name="quick_turn_off_description">Tap to restore changed settings</string>
    <string name="pref_title_immersive">Status/navigation bars</string>
    <string name="pref_title_immersive_alt">Status/Navigation Bars</string>
    <string name="quick_rotation">Screen Rotation</string>
    <string name="debug_show_simulated_size_density">Show simulated size/density</string>
    <string name="debug_simulate_reboot">Simulate reboot</string>
    <string name="debug_simulate_app_upgrade">Simulate application upgrade</string>
    <string name="debug_dump_app_state">Dump current application state</string>
</resources>